examples/network-policy/access-pod.yaml
# The pod should be in 'Complated' state since it's with label 'access=true'
apiVersion: v1
kind: Pod
metadata:
  name: access-pod
  labels:
      access: "true"
      app: access-pod
spec:
  restartPolicy: Never
  containers:
  - name: busybox
    image: busybox
    command:
    - sh
    - -c
    - wget --spider --timeout=1 nginx
    stdin: true
    tty: true
    resources:
      requests:
        cpu: 10m
        memory: 32Mi
