examples/network-policy/no-access-pod.yaml
# The pod should be in 'Error' state since no access to nginx.
apiVersion: v1
kind: Pod
metadata:
  name: no-access-pod
  labels:
    app: no-access-pod
spec:
  restartPolicy: Never
  containers:
  - name: busybox
    image: busybox
    command:
    - sh
    - -c
    - wget --spider --timeout=1 nginx
    stdin: true
    tty: true
    resources:
      requests:
        cpu: 10m
        memory: 32Mi
